testing/errors/userdefined1.a
	!error "they'd all made a big mistake in coming down from the trees in the first place."
